--- a/build.gradle
+++ b/build.gradle
@@ -11,8 +11,24 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.2'
         classpath 'com.google.gms:google-services:3.3.0'
+        classpath 'com.github.triplet.gradle:play-publisher:1.2.0'
+
     }
 }
+
+subprojects {
+    apply plugin: 'com.android.application'
+    repositories {
+        jcenter()
+        flatDir{
+            dirs '../libs'
+        }
+    }
+    dependencies {
+        compile 'com.flashphoner.fpwcsapi:wcs-android-sdk-1.0.1.25@aar'
+    }
+}
+
 
 allprojects {
     repositories {
