--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.yakovlaptev.vkr">
 
@@ -27,23 +28,21 @@
                     android:pathPattern="/.*"
                     android:scheme="https" />
             </intent-filter>
-
-
         </activity>
         <activity
             android:name=".EmailPasswordActivity"
             android:label="@string/app_name"
             android:windowSoftInputMode="stateAlwaysHidden">
             <intent-filter android:order="1">
-            <action android:name="android.intent.action.VIEW" />
+                <action android:name="android.intent.action.VIEW" />
 
-            <category android:name="android.intent.category.BROWSABLE" />
-            <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <category android:name="android.intent.category.DEFAULT" />
 
-            <data
-                android:host="yakovlaptev.com"
-                android:pathPattern="/.*"
-                android:scheme="https" />
+                <data
+                    android:host="yakovlaptev.com"
+                    android:pathPattern="/.*"
+                    android:scheme="https" />
             </intent-filter>
         </activity>
         <activity
@@ -66,15 +65,18 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
             android:name=".VideoChatActivity"
-            android:label="@string/app_name"
-            android:configChanges="orientation|screenSize">
+            android:configChanges="orientation|screenSize"
+            android:label="Chat" />
+        <activity
+            android:name=".AddEvent"
+            android:label="Add event">
         </activity>
 
-   <!--     <activity android:name=".MyEvents">
+        <!--
+            <activity android:name=".MyEvents">
             <intent-filter android:order="1">
                 <action android:name="android.intent.action.VIEW" />
 
@@ -115,6 +117,8 @@
                     android:pathPattern="/.*"
                     android:scheme="https" />
             </intent-filter>
-        </activity>-->
+        </activity>
+        -->
     </application>
+
 </manifest>
